--- a/conf/php-fpm.d/www.conf
+++ b/conf/php-fpm.d/www.conf
@@ -3,7 +3,8 @@
 user = www-data
 group = www-data
 
-listen = 127.0.0.1:9000
+; we need to bind on 0.0.0.0, since php-fpm run on separated container from nginx
+listen = 0.0.0.0:9000
 
 pm = dynamic
 pm.start_servers = 10
