remove unnessary packages

--- a/build
+++ b/build
@@ -1,3 +1,4 @@
 #!/bin/sh
 
-docker build -t ball6847/we-alpine-php7 .
+docker build -t ball6847/we-alpine-php7:7.1 --compress --rm .
+docker tag ball6847/we-alpine-php7:7.1 ball6847/we-alpine-php7:latest
